# kdeutils

ark/: ark.desktop
kcalc/: kcalcdisplay.cpp
klaptopdaemon/: laptop_daemon.cpp  portable.cpp
kmilo/thinkpad/: thinkpad.cpp
ksensors/: AUTHORS  ChangeLog  Doxyfile  FAQ  LEEME  LIESMICH  LISEZMOI  Makefile.am  Makefile.in  README  TODO  config.h.in  configure.in  configure.in.in  ksensors.kdevelop  ksensors.kdevelop.pcs  ksensors.kdevses
ksensors/debian/: changelog  control  rules
ksensors/doc/: Makefile.am  Makefile.in
ksensors/doc/en/: Makefile.am  Makefile.in  index.cache.bz2  index.docbook
ksensors/po/: Makefile.in  cs.gmo  cs.po  de.gmo  de.po  es.gmo  es.po  fr.gmo  fr.po  ksensors.pot  nb.po  nl.gmo  nl.po  pl.po  sv.po
ksensors/src/: Makefile.am  Makefile.in  aboutcfgdesign.cpp  aboutcfgdesign.h  aboutcfgdesign.ui  cpupanel.cpp  cpupanel.h  cputimepanel.cpp  cputimepanel.h  generalcfg.cpp  generalcfg.h  generalcfgdesign.cpp  generalcfgdesign.h  generalcfgdesign.ui  hdsensorslist.cpp  hdsensorslist.h  i8ksensorslist.cpp  i8ksensorslist.h  infopanels.cpp  infopanels.h  ksensors.cpp  ksensors.desktop  ksensors.h  ksensors.lsm  ksensorscfg.cpp  ksensorscfg.h  ksensorssplash.cpp  ksensorssplash.h  ksensorsui.rc  lmsensor.cpp  lmsensor.h  lmsensordockpanel.cpp  lmsensordockpanel.h  lmsensorpanel.cpp  lmsensorpanel.h  lmsensors.cpp  lmsensors.h  lmsensorsalarms.cpp  lmsensorsalarms.h  lmsensorscfg.cpp  (+45 more)
ksensors/src/pics/: Makefile.am  Makefile.in
ksensors/src/sounds/: Makefile.am  Makefile.in
ksim/monitors/filesystem/: filesystemstats.cpp
superkaramba/src/: networksensor.cpp
