####### kdevelop will overwrite this part!!! (begin)##########

INCLUDES = $(all_includes)

EXTRA_DIST = thermometer.png thermometer18x18.png motherboard.png ksensorssplash.png ksensorsdocked.png ksensorsbackground.png harddisk.png earth.png cooler.png cooler18x18.png computers.png battery.png battery18x18.png lo32-app-ksensors.png lo16-app-ksensors.png hi32-app-ksensors.png hi16-app-ksensors.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/ksensors/pics/
	$(INSTALL_DATA) $(srcdir)/thermometer.png $(kde_datadir)/ksensors/pics/thermometer.png
	$(mkinstalldirs) $(kde_datadir)/ksensors/pics/
	$(INSTALL_DATA) $(srcdir)/thermometer18x18.png $(kde_datadir)/ksensors/pics/thermometer18x18.png
	$(mkinstalldirs) $(kde_datadir)/ksensors/pics/
	$(INSTALL_DATA) $(srcdir)/motherboard.png $(kde_datadir)/ksensors/pics/motherboard.png
	$(mkinstalldirs) $(kde_datadir)/ksensors/pics/
	$(INSTALL_DATA) $(srcdir)/ksensorssplash.png $(kde_datadir)/ksensors/pics/ksensorssplash.png
	$(mkinstalldirs) $(kde_datadir)/ksensors/pics/
	$(INSTALL_DATA) $(srcdir)/ksensorsdocked.png $(kde_datadir)/ksensors/pics/ksensorsdocked.png
	$(mkinstalldirs) $(kde_datadir)/ksensors/pics/
	$(INSTALL_DATA) $(srcdir)/ksensorsbackground.png $(kde_datadir)/ksensors/pics/ksensorsbackground.png
	$(mkinstalldirs) $(kde_datadir)/ksensors/pics/
	$(INSTALL_DATA) $(srcdir)/harddisk.png $(kde_datadir)/ksensors/pics/harddisk.png
	$(mkinstalldirs) $(kde_datadir)/ksensors/pics/
	$(INSTALL_DATA) $(srcdir)/earth.png $(kde_datadir)/ksensors/pics/earth.png
	$(mkinstalldirs) $(kde_datadir)/ksensors/pics/
	$(INSTALL_DATA) $(srcdir)/cooler.png $(kde_datadir)/ksensors/pics/cooler.png
	$(mkinstalldirs) $(kde_datadir)/ksensors/pics/
	$(INSTALL_DATA) $(srcdir)/cooler18x18.png $(kde_datadir)/ksensors/pics/cooler18x18.png
	$(mkinstalldirs) $(kde_datadir)/ksensors/pics/
	$(INSTALL_DATA) $(srcdir)/computers.png $(kde_datadir)/ksensors/pics/computers.png
	$(mkinstalldirs) $(kde_datadir)/ksensors/pics/
	$(INSTALL_DATA) $(srcdir)/battery.png $(kde_datadir)/ksensors/pics/battery.png
	$(mkinstalldirs) $(kde_datadir)/ksensors/pics/
	$(INSTALL_DATA) $(srcdir)/battery18x18.png $(kde_datadir)/ksensors/pics/battery18x18.png
	$(mkinstalldirs) $(kde_icondir)/locolor/32x32/apps/
	$(INSTALL_DATA) $(srcdir)/lo32-app-ksensors.png $(kde_icondir)/locolor/32x32/apps/ksensors.png
	$(mkinstalldirs) $(kde_icondir)/locolor/16x16/apps/
	$(INSTALL_DATA) $(srcdir)/lo16-app-ksensors.png $(kde_icondir)/locolor/16x16/apps/ksensors.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/32x32/apps/
	$(INSTALL_DATA) $(srcdir)/hi32-app-ksensors.png $(kde_icondir)/hicolor/32x32/apps/ksensors.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/apps/
	$(INSTALL_DATA) $(srcdir)/hi16-app-ksensors.png $(kde_icondir)/hicolor/16x16/apps/ksensors.png

uninstall-local:
	-rm -f $(kde_datadir)/ksensors/pics/thermometer.png
	-rm -f $(kde_datadir)/ksensors/pics/thermometer18x18.png
	-rm -f $(kde_datadir)/ksensors/pics/motherboard.png
	-rm -f $(kde_datadir)/ksensors/pics/ksensorssplash.png
	-rm -f $(kde_datadir)/ksensors/pics/ksensorsdocked.png
	-rm -f $(kde_datadir)/ksensors/pics/ksensorsbackground.png
	-rm -f $(kde_datadir)/ksensors/pics/harddisk.png
	-rm -f $(kde_datadir)/ksensors/pics/earth.png
	-rm -f $(kde_datadir)/ksensors/pics/cooler.png
	-rm -f $(kde_datadir)/ksensors/pics/cooler18x18.png
	-rm -f $(kde_datadir)/ksensors/pics/computers.png
	-rm -f $(kde_datadir)/ksensors/pics/battery.png
	-rm -f $(kde_datadir)/ksensors/pics/battery18x18.png
	-rm -f $(kde_icondir)/locolor/32x32/apps/ksensors.png
	-rm -f $(kde_icondir)/locolor/16x16/apps/ksensors.png
	-rm -f $(kde_icondir)/hicolor/32x32/apps/ksensors.png
	-rm -f $(kde_icondir)/hicolor/16x16/apps/ksensors.png

####### kdevelop will overwrite this part!!! (end)############
