####### kdevelop will overwrite this part!!! (begin)##########

INCLUDES = $(all_includes)

EXTRA_DIST = ksensors_alert.wav

install-data-local:
	$(mkinstalldirs) $(kde_sounddir)
	$(INSTALL_DATA) $(srcdir)/ksensors_alert.wav $(kde_sounddir)/ksensors_alert.wav
uninstall-local:
	rm -f $(kde_sounddir)/ksensors_alert.wav

####### kdevelop will overwrite this part!!! (end)############
